--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "angular-2-local-storage": "^3.0.2",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
+    "simple-line-icons": "^2.4.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
